--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   bitsdojo_window: ^0.1.6
   google_fonts: ^6.2.1
   file_picker: ^10.1.2
+  crypto: ^3.0.3
+  path: ^1.8.2
+  open_filex: ^4.0.0
 
 dev_dependencies:
   flutter_test:
