--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^<latest-version>
   bitsdojo_window: ^0.1.6
   google_fonts: ^6.2.1
-  file_picker: ^10.1.2
-  crypto: ^3.0.3
-  path: ^1.8.2
-  open_filex: ^4.0.0
+  file_picker: ^10.1.9
+  crypto: ^3.0.6
+  path: ^1.9.1
+  open_filex: ^4.7.0
 
 dev_dependencies:
   flutter_test:
