--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^<latest-version>
+  cupertino_icons: ^1.0.8
   bitsdojo_window: ^0.1.6
   google_fonts: ^6.2.1
   file_picker: ^10.1.9
